--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+  
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>8.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
